--- a/index.css
+++ b/index.css
@@ -10,29 +10,29 @@ html, body{
 }
 
 #bodywrap{
+    padding-top:100px;
+    margin-top: -120px;
+    position: relative;
     height: 100%;
+    padding-bottom: 100px;
 }
 
 div#map {
     height: 100%;
     position: relative;
-    padding-bottom: 100px;
+    padding: 100px 0;
 }
 
-footer{
-    bottom: 0;
-    position: fixed;
+#footer{
     height: 100px;
-    line-height: 100px;
-    padding-left: 30px;
     background: #000;
     color: white;
     width: 100%;
+    text-align: center;
 }
 
-header{
+#header{
     height: 100px;
-    padding-left: 30px;
     background: #000;
     color: white;
     margin: 0;
