--- a/views/NavView.html
+++ b/views/NavView.html
@@ -1,3 +1,3 @@
-<header ng-controller="UserController as ctrl">
+<div ng-controller="UserController as ctrl">
     <h1>Hi, {{ctrl.user.firstName}}</h1>
-</header>
+</div>
