--- a/index.css
+++ b/index.css
@@ -4,37 +4,37 @@
 
 html, body{
     height: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
-    top: 0;
+    width: 100%
 }
 
 #bodywrap{
-    padding-top:100px;
-    margin-top: -120px;
-    position: relative;
-    height: 100%;
-    padding-bottom: 100px;
-}
-
-div#map {
-    height: 100%;
-    position: relative;
-    padding: 100px 0;
-}
-
-#footer{
-    height: 100px;
-    background: #000;
-    color: white;
     width: 100%;
-    text-align: center;
-    line-height: 100px;
+    height: 100%;
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: -50px;
 }
 
 #header{
-    height: 100px;
-    background: #000;
-    color: white;
-    margin: 0;
+    height: 50px;
+    width: 100%;
+    padding-bottom: 50px;
+}
+
+#map {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+}
+
+#footer{
+    height: 50px;
+    width: 100%;
+    text-align: center;
+    line-height: 50px;
+    background: #ccc;
+    color: black;
 }
