--- a/index.css
+++ b/index.css
@@ -8,33 +8,25 @@ html, body{
 }
 
 #bodywrap{
-    width: 100%;
     height: 100%;
     position: relative;
-    padding-top: 50px;
     padding-bottom: 50px;
+    padding-top: 50px;
     margin-top: -50px;
 }
 
 #header{
-    height: 50px;
-    width: 100%;
-    padding-bottom: 50px;
+    margin-top: -3px;
 }
 
 #map {
     height: 100%;
-    width: 100%;
     position: relative;
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
+    margin-top: -20px;
 }
 
 #footer{
     height: 50px;
-    width: 100%;
     text-align: center;
-    line-height: 50px;
-    background: #ccc;
-    color: black;
+    line-height: 40px;
 }
