--- a/index.css
+++ b/index.css
@@ -23,6 +23,8 @@ html, body{
     height: 100%;
     position: relative;
     margin-top: -20px;
+    border-top: 1px solid #888;
+    border-bottom: 1px solid #888;
 }
 
 #footer{
